版本升级影响的类